# haskdogs

./: LICENSE  README  README.md  haskdogs  haskdogs.cabal
src/: Main.hs  haskdogs.hs
